[gd_scene load_steps=5 format=2]

[ext_resource path="res://christmas lights.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://big scenes/mainmenu.gd" type="Script" id=2]
[ext_resource path="res://gui/button.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="mainmenu" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 198.0
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer/label"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[]
[center]christmas lights
"
text = "[]
christmas lights
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 202.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_right = 338.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control3"]
margin_left = 4.0
margin_right = 341.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control3/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 337.0
margin_bottom = 82.0
focus_neighbour_top = NodePath("../button3")
focus_neighbour_bottom = NodePath("../button2")
focus_next = NodePath("../button2")
focus_previous = NodePath("../button3")
size_flags_vertical = 11
text = "MENU_PLAY"

[node name="button2" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control3/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 132.0
margin_right = 337.0
margin_bottom = 214.0
focus_neighbour_top = NodePath("../button")
focus_neighbour_bottom = NodePath("../button3")
focus_next = NodePath("../button3")
focus_previous = NodePath("../button")
size_flags_vertical = 3
text = "MENU_OPTIONS"

[node name="button3" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control3/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 264.0
margin_right = 337.0
margin_bottom = 348.0
focus_neighbour_top = NodePath("../button2")
focus_neighbour_bottom = NodePath("../button")
focus_next = NodePath("../button")
focus_previous = NodePath("../button2")
size_flags_vertical = 3
text = "MENU_QUIT"

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control3/VBoxContainer/button" to="." method="_on_button_pressed"]
